Fixed left width when playlists overflowed

--- a/styles/default.css
+++ b/styles/default.css
@@ -398,9 +398,11 @@ input[type=search]::-webkit-search-results-decoration {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     height: 100%;
+    max-width: 100%;
     font-size: 14px;
     text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
     padding: 10px 5px 5px 5px;
+    overflow: hidden;
     overflow-y: auto;
 }
 #left .menu li:hover {
